* Added builder pattern to CORSConfiguration * More modern java improvements * Fixed broken test